--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,25 @@
     </head>
     <h1>Welcome to Dog Likers Anonymous!</h1>
 
+    <div>
+        <form id='new-dog'>
+            <h2>Add a New Dog</h2>
+            <label>Name:</label>
+            <input type='text' name='name'></input><br>
+            <label>Breed:</label>
+            <input type='text' name='breed'></input><br>
+            <label>Image URL:</label>
+            <input type='text' name='img'></input><br>
+            <input type='submit'></input>
+        </form>
+    </div>
+    
+
     <main>
         <!-- fill in dog breeds here -->
     </main>
 
-    <form>
-        <!-- your code for the new dog form here! -->
-    </form>
+
 
     <script src='./index.js'></script>
 </html>
